# clean-architecture

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: settings.toml
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  concept.md  configuration.md  docker.md  makefile.md  profiling.md  structure.md  testing.md
profiles/: 20251227_162601_150611_POST_v1_answer_generate.speedscope.json
scripts/: prof_to_speedscope.py
src/app/: main.py
src/app/api/: application_api.py  exception_handlers.py
src/app/api/common/: api.py
src/app/api/common/endpoints/: healthcheck.py  root.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: rag.py
src/app/application/services/: search_service.py
src/app/core/: app_factory.py  config.py  constants.py  containers.py  events.py  exceptions.py  lifespan.py  logging.py  monitor.py  types.py
src/app/domain/entities/: document.py
src/app/domain/interfaces/: observability.py  search_repository.py
src/app/infrastructure/observability/: events.py  logging.py  metrics.py  monitor.py  profiling.py
src/app/infrastructure/observability/strategies/: logging.py  metrics.py  tracing.py
src/app/infrastructure/persistence/repositories/: search_repository.py
src/app/infrastructure/services/: metrics_service.py
src/app/presentation/api/: application_api.py  exception_handlers.py
src/app/presentation/api/common/: api.py
src/app/presentation/api/common/endpoints/: healthcheck.py  metrics.py  root.py
src/app/presentation/api/schemas/: healthcheck.py  root.py  search.py
src/app/presentation/api/v1/: api.py
src/app/presentation/api/v1/endpoints/: search.py
src/app/schemas/: logger.py  server.py
src/app/utils/: configs.py  monitor.py  serializer.py
tests/: conftest.py
tests/e2e/api/: test_healthcheck_endpoint.py  test_metrics_endpoint.py  test_root_endpoint.py  test_search_endpoint.py
tests/integration/infrastructure/: test_search_repository.py
tests/performance/: config.py  locustfile.py  metrics.py  users.py
tests/schemas/e2e/api/: healthcheck.py  metrics.py  root.py  search.py
tests/schemas/integration/infrastructure/: search_repository.py
tests/schemas/unit/application/: search_service.py
tests/schemas/unit/infrastructure/observability/strategies/: logging.py  metrics.py  tracing.py
tests/unit/: conftest.py
tests/unit/application/: test_search_service.py
tests/unit/infrastructure/observability/strategies/: test_logging.py  test_metrics.py  test_tracing.py
tests/unit/utils/: test_serializer.py
