[project]
name = "eva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "dependency-injector>=4.48.3",
    "dynaconf>=3.2.12",
    "fastapi>=0.124.4",
    "granian[reload]>=2.6.0",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45.0",
    "opentelemetry-exporter-prometheus",
    "opentelemetry-exporter-otlp>=1.24.0",
    "orjson>=3.11.5",
]

[dependency-groups]
dev = [
    "darglint>=1.8.1",
    "flake8-pyproject>=1.2.4",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "locust>=2.32.0",
    "ruff>=0.14.9",
    "types-colorama>=0.4.15.20250801",
    "wemake-python-styleguide>=1.4.0",
]

############### TOOLS #############################################
############## RUFF ################################
[tool.ruff]
# Длина строки (как у Black)
line-length = 79
# Версия питона
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
    "F", # Pyflakes (ошибки синтаксиса, неиспользуемые импорты)
    "E", "W", # Pycodestyle (стиль кода)
    "I", # Isort (сортировка импортов)
    "N", # PEP8-naming (нейминг переменных/классов)
    "UP", # Pyupgrade (требует современный синтаксис 3.12+)
    "YTT", # flake8-2020 (ошибки совместимости версий)
    "ANN", # Flake8-annotations (ТРЕБУЕТ типы везде, даже для self/cls)
    "ASYNC", # Flake8-async (ошибки в async коде)
    "S", # Bandit (поиск уязвимостей безопасности)
    "BLE", # Flake8-blind-except (запрещает `except Exception:`)
    "FBT", # Flake8-boolean-trap (запрещает функции foo(True, False))
    "B", # Flake8-bugbear (поиск реальных багов и проблем логики)
    "A", # Flake8-builtins (запрещает называть переменные id, list, str)
    "C4", # Flake8-comprehensions (лучшие практики list/dict comprehension)
    "DTZ", # Flake8-datetimez (ЗАПРЕЩАЕТ datetime.now() без таймзоны)
    "T10", # Flake8-debugger (запрещает breakpoint() и pdb)
    "EXE", # Flake8-executable (права доступа файлов)
    "ICN", # Flake8-import-conventions (стандартные алиасы типа pd, np)
    "G", # Flake8-logging-format (правильное логирование)
    "PIE", # Flake8-pie (мелкие улучшения логики)
    "T20", # Flake8-print (ЗАПРЕЩАЕТ print, требует logger)
    "PT", # Flake8-pytest-style (правильный стиль тестов)
    "Q", # Flake8-quotes (кавычки)
    "RSE", # Flake8-raise (упрощение raise)
    "RET", # Flake8-return (проверка логики return)
    "SLF", # Flake8-self (запрет доступа к приватным полям _field снаружи)
    "SIM", # Flake8-simplify (предлагает упростить if/else)
    "TID", # Flake8-tidy-imports (запрет относительных импортов и др.)
    "TCH", # Flake8-type-checking (перенос импортов только для типов в TYPE_CHECKING блок)
    "ARG", # Flake8-unused-arguments (поиск неиспользуемых аргументов функций)
    "PTH", # Flake8-use-pathlib (запрещает os.path, требует Pathlib)
    "ERA", # Eradicate (ЗАПРЕЩАЕТ закомментированный код)
    "PL", # Pylint (Мощный анализ: Convention, Error, Refactor, Warning)
    "TRY", # Tryceratops (плохие практики в try/except)
    "FLY", # Flynt (f-strings конвертация)
    "PERF", # Perflint (антипаттерны производительности)
    "FURB", # Refurb (модернизация кода)
    "RUF", # Специфичные правила Ruff
    "PERF401",
]

#external = ["WPS"]
# Добавляем PLR (Pylint Refactor) в список проверок (Магические константы)
#extend-select = ["PLR"]

# Игнорируем конфликты с форматтером и устаревшие правила
ignore = [
    "E501", # Длину строки проверяет ruff format, а не линтер
    "ISC001", # Конфликт с форматтером
    "ANN101", # Требование типа для self (deprecated)
    "ANN102", # Требование типа для cls (deprecated)
    "COM812", # Конфликт запятых с форматтером
    "E111",    # Indentation is not a multiple of 4
    "E114",    # Indentation comments
    "E117",    # Over-indented
    "D206",    # Docstring indentation
    "D300",    # Triple quotes usage
    "Q000",    # Quotes
    "Q001",
    "Q002",
    "Q003",
    "W191",    # Tab indentation
    "RUF003", # Запретить ругаться на комментарии
    "N818", # Error вместо Exception под запретом
    "RUF100", # Отключаем правило RUF100 (Unused noqa directive)
]

# Разрешаем кириллические буквы, похожие на латинские, чтобы Ruff не ругался
allowed-confusables = [
    "В", "А", "Е", "К", "М", "Н", "О",
    "Р", "С", "Т", "У", "Х", "а", "е",
    "о", "р", "с", "у", "х", "г"
]

# ------------------------------------------------------------------
# Тонкая настройка исключений
# ------------------------------------------------------------------
[tool.ruff.lint.extend-per-file-ignores]
# В тестах можно:
# S101: использовать assert
# PLR2004: использовать магические числа (assert result == 200)
# ANN: не писать типы аргументов (иногда это лишнее в тестах)
# SLF001: обращаться к приватным полям (для тестов это ок)
"tests/*" = ["S101", "PLR2004", "ANN", "SLF001"]

# В файле миграций (Alembic) можно не писать типы
"alembic/*" = ["ANN"]

# Decorators need to catch all exceptions and use f-strings for logging
"src/app/core/decorators.py" = ["BLE001", "G004", "ANN401", "B008", "PLC0415"]
"src/app/infrastructure/observability/monitor.py" = ["BLE001", "G004", "ANN401", "B008", "PLC0415", "PLE1205"]
"src/app/infrastructure/observability/logging.py" = ["ANN401"]

[tool.ruff.lint.flake8-bugbear]
# Разрешаем некоторые функции как дефолтные аргументы (FastAPI Depends)
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body"
]

[tool.ruff.lint.isort]
# Настройки импортов
## Опционально: стиль объединения импортов (чтобы не было ошибок со скобками)
# --- Обязательно для WPS ---
lines-after-imports = 2           # WPS306 требует ровно 2 пустые строки после блока импортов
combine-as-imports = false         # Объединять "from x import (a, b)"

# --- Отключить то, что вы включали ранее ---
force-single-line = true         # WPS не требует Java-стиля, он любит скобки
force-wrap-aliases = true        # Обычно false

# --- приложение ---
known-first-party = ["app"]

[tool.ruff.lint.pylint]
# Максимальное количество аргументов функции (по умолчанию 5)
max-args = 8
# Максимальное количество ветвлений (if/else)
max-branches = 12


[tool.ruff.format]
# Использовать одинарные кавычки (опционально, Black любит двойные)
quote-style = "double"


################### MYPY ###################################
[tool.mypy]
# Указываем версию Python и где искать код
python_version = "3.12"
files = ["src"]
mypy_path = "src"

# ---------------------------------------------------------
# 1. Глобальная строгость (Включает большинство проверок)
# ---------------------------------------------------------
strict = true
# Разрешаем нетипизированные декораторы
disallow_untyped_decorators = false

# ---------------------------------------------------------
# 2. Требование аннотаций
# ---------------------------------------------------------
# Запрещает функции без аннотаций (def foo(x) -> None: error)
disallow_untyped_defs = true
# Запрещает неполные аннотации (def foo(x: int, y): error)
disallow_incomplete_defs = true
# Проверяет тело даже нетипизированных функций (на всякий случай)
check_untyped_defs = true

# ---------------------------------------------------------
# 3. Работа с импортами и Any
# ---------------------------------------------------------
# Запрещает использовать Any, который прилетел из библиотеки без типов
# Разрешаем передавать объекты из библиотек без типов иначе замучаемся
disallow_any_unimported = false
# Если Mypy не нашел типы для библиотеки — он упадет с ошибкой.
# (По умолчанию в strict это True, но пишем явно)
ignore_missing_imports = false

# ---------------------------------------------------------
# 4. Дополнительная строгость
# ---------------------------------------------------------
# Запрещает возвращать Any из функции, которая заявлена как typed
warn_return_any = true
# Запрещает использовать List, Dict без указания типов (List[int])
disallow_any_generics = true
# Запрещает "Optional" без явного указания (x: int = None -> Error)
no_implicit_optional = true
# Запрещает сравнение несовместимых типов (if 1 == "1": Error)
strict_equality = true
# Ругается, если вы поставили # type: ignore там, где ошибки нет
warn_unused_ignores = true
# Ругается, если вы делаете cast(int, x), а x и так int
warn_redundant_casts = true

# ---------------------------------------------------------
# Плагины (Обязательно для FastAPI/Pydantic)
# ---------------------------------------------------------
plugins = [
    "pydantic.mypy"
]

# Настройка плагина Pydantic для максимальной строгости
[tool.pydantic-mypy]
# Запрещает передавать лишние аргументы при создании модели.
init_forbid_extra = true
# Заставляет Mypy строго проверять типы аргументов, передаваемых в конструктор модели.
init_typed = true
# Предупреждает, если вы используете сложные (динамические) алиасы для обязательных полей
warn_required_dynamic_aliases = true

# Если у библиотеки нет типа (kafka-python, boto3 и т.д)
# Пример: библиотека "dynaconf" не имеет типов, и мы это знаем
[[tool.mypy.overrides]]
module = [
    "dynaconf.*",
    "dependency_injector.*",
    "structlog.*",
    "app.core.containers"
]
# Разрешаем наследоваться от Any (DeclarativeContainer) только здесь
disallow_subclassing_any = false
# 1. Разрешаем Mypy не находить стабы типов
ignore_missing_imports = true
# 2. Разрешаем использовать Any, который прилетел из этой библиотеки
disallow_any_unimported = false

# Decorators module has complex typing with dependency injection
[[tool.mypy.overrides]]
module = ["app.core.decorators"]
disallow_untyped_decorators = false
####################### MYPY #####################################

##################### FLAKE8 / WEMAKE ########################
[tool.flake8]
# Максимальная длина строки (должна совпадать с Ruff)
max-line-length = 79

# Глубина вложенности и сложность (WPS очень строг к этому)
max-complexity = 6
max-line-complexity = 12
max-arguments = 8
#known-enum-bases = "Events,StrEnum"
# Игнорирование по файлам
#per-file-ignores = [
#    # Формат: "путь_к_файлу:коды_ошибок"
#    "src/app/core/types.py:WPS115",
#    "**/types.py: WPS115"
#]

# Исключаем папки
exclude = [".git", "__pycache__", ".venv", ".eggs", "*.egg", "dist"]

# -------------------------------------------------------------------------
# СПИСОК ИГНОРИРОВАНИЯ (Самая важная часть)
# -------------------------------------------------------------------------
ignore = [
    # --- Форматирование (Конфликты с Ruff Format / Black) ---
    "W503",   # Line break before binary operator
    "E203",   # Whitespace before ':'
    "Q000",   # WPS требует одинарные кавычки (Ruff ставит двойные)
    "C812",   # Missing trailing comma
    "WPS305", # Запрет f-строк (WPS их не любит, но мы их любим)
    "WPS306", # Found class without a base class (в Python 3 это не нужно)
    "WPS326", # Found implicit string concatenation (Ruff сам это правит)
    "WPS226", # Found string constant over-use (иногда мешает в тестах/конфигах)

    # --- Документация (Если не пишете публичную библиотеку) ---
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",

    # --- Излишняя строгость для FastAPI ---
    "WPS404", # Found complex default value (FastAPI использует Depends(...))
    "WPS430", # Found nested function (иногда нужно для декораторов)
    "WPS400", # магические коды в комментария
    "WPS602", # Found using @staticmethod
    "N818", # Error вместо Exception под запретом
    "WPS115",
    "WPS110", # Wrong variable name (result, value, etc)
    "WPS111", # Short variable name (e, k, v)
    "WPS229", # Too long try body length
    "WPS318", # Found extra indentation (conflicts with ruff-format)
    "WPS319", # Found bracket in wrong position (conflicts with ruff-format)
]
per-file-ignores = [
    "src/app/core/types.py: WPS115",
    "**/types.py: WPS115",
    "src/app/infrastructure/observability/monitor.py: WPS201, WPS433, WPS221, WPS230, WPS231, WPS210, WPS220, C901",
    "src/app/core/app_factory.py: WPS201",
    "src/app/infrastructure/observability/logging.py: WPS201",
    "tests/*: WPS442, WPS237, WPS432, WPS317, WPS318, WPS319"
]
#WPS210: Слишком много локальных переменных.
#WPS220: Слишком глубокая вложенность.
#C901: Слишком высокая цикломатическая сложность.

# Настройки для плагинов внутри WPS
[tool.flake8.plugins]
# Разрешаем f-строки
accept-encodings = "utf-8"
#[flake8]

[tool.darglint.plugins]
docstring_style = "google"

################# DARGLINT ####################
[tool.darglint]
docstring_style = "google"





[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


